# flink-udf-python-examples

./: .gitignore  README.md  pyproject.toml  renovate.json  run_all_tests.sh  service.yml  targz2zip.sh
.github/: CODEOWNERS
.semaphore/: semaphore.yml
basic/: pyproject.toml
basic/src/example_udf/: scalar.py
basic/tests/: test_scalar.py
confluent_udf_shim-0.1.0/: PKG-INFO  pyproject.toml  pyproject.toml.backup
confluent_udf_shim-0.1.0/src/confluent_udf_shim/: executor.py
confluent_udf_shim-0.1.0/src/confluent_udf_shim/core/: coders.py  exceptions.py  extractor.py  importer.py
confluent_udf_shim-0.1.0/src/confluent_udf_shim/proto/: bridge.py
confluent_udf_shim-0.1.0/src/confluent_udf_shim/proto/api/: __init__.py  execution_pb2.py  execution_pb2.pyi  extractor_pb2.py  extractor_pb2.pyi
confluent_udf_shim-0.1.0/src/pyflink/: __init__.py
confluent_udf_shim-0.1.0/src/pyflink/common/: time.py
confluent_udf_shim-0.1.0/src/pyflink/fn_execution/: __init__.py  coders.py  stream_slow.py
confluent_udf_shim-0.1.0/src/pyflink/table/: __init__.py  types.py  udf.py
create-updated-shim/confluent_udf_shim-0.1.0/: README.md
create-updated-shim/confluent_udf_shim-0.1.0/src/confluent_udf_shim/: executor.py  extractor.py
create-updated-shim/confluent_udf_shim-0.1.0/src/pyflink/common/: __init__.py  types.py
create-updated-shim/confluent_udf_shim-0.1.0/src/pyflink/fn_execution/: coder_impl_slow.py
create-updated-shim/confluent_udf_shim-0.1.0/src/pyflink/table/: expression.py
email_mask/: README.md  pyproject.toml
email_mask/src/email_mask/: anonymize.py  email_mask.py
email_mask/tests/: test_email_mask.py
examples/email_mask/: flink_sql_complete.sql  pyproject.toml
examples/email_mask/src/email_mask/: __init__.py  email_mask.py
pii_mask/: README.md  flink_sql_complete.sql  pyproject.toml
pii_mask/src/pii_mask/: __init__.py  anonymize.py
pii_mask/tests/: test_pii_mask.py  test_repo.py
src/example_udf/: __init__.py  scalar.py
terraform_deploy/: README.md  main.tf  variables.tf
