[project]
name = "example-udf"
version = "0.1.0"
description = "Example customer Python UDF"
readme = "README.md"
authors = [
    { name = "David Selassie", email = "dselassie@confluent.io" }
]
requires-python = ">=3.10"
dependencies = [
    # This is needed to define your UDF. We only support one version
    # of `apache-flink` currently.
    "apache-flink==2.0.0",
    # You can bring in other external dependencies. Use `uv add` to
    # resolve a version which will work with the runtime constraints.
    "grpcio>=1.65.5",
    "protobuf>=5.29.5",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]

[tool.uv]
# These will come from combining the direct deps of
# `confluent-function-runtime-server` and `confluent-udf-shim`. We
# will eventually host this list publicly.
constraint-dependencies = [
    "apache-flink==2.0.0",
    "click>=8.2.0",
    "confluent-function-runtime-core>=0.161.0",
    "grpc-interceptor>=0.15.0",
    "grpcio-health-checking>=1.65.0",
    "grpcio-reflection>=1.65.0",
    "grpcio>=1.65.0",
    "protobuf>=5.29.1",
    "typing_extensions>=4.4.0",
]
