[project]
name = "pii-mask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Selassie", email = "dselassie@confluent.io" }
]
requires-python = ">=3.11"
dependencies = [
    "apache-flink==2.0.0",
    # For any private package that isn't available on public PyPI,
    # don't add it to `dependencies`. Instead, add it as a `dev`
    # dependency via `uv add --dev`, and then ZIP the `whl` or
    # `tar.gz` into the Confluent Cloud artifact.

    # "en-core-web-sm",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "spacy>=3.8.11",
    "typing-extensions>=4.15.0",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
constraint-dependencies = [
    "apache-flink==2.0.0",
    "click>=8.2.0",
    "confluent-function-runtime-core>=0.181.0",
    "grpc-interceptor>=0.15.0",
    "grpcio-health-checking>=1.65.0",
    "grpcio-reflection>=1.65.0",
    "grpcio>=1.65.0",
    "protobuf>=5.29.1",
    "psutil>=5.9.0",
    "pyparsing>=3.2.5",
    "typing_extensions>=4.4.0",
]

[tool.uv.sources]
en-core-web-sm = { path = "en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    # The private dependency is still added as a dev, so that uv can
    # manage finding the dependency locally. This might involve uv
    # creating a `tool.uv.sources` entry to show how to specially find
    # the dependency locally.
    "en-core-web-sm",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]

[tool.mypy]
files = [
    "src",
    "tests",
]
strict = true

[[tool.mypy.overrides]]
# `apache-flink==2.0.0` does not formally declare type hints, but you
# can still instruct mypy to do basic type checking.
module = [
    "pyflink.*",
]
follow_untyped_imports = true
